--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ rust-version = "1.76.0"
 tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread"] }
 tokio-stream = { version = "0.1.14", features = ["sync"] }
 tonic = "0.11.0"
+tonic-reflection = "0.11.0"
 prost = "0.12.3"
 async-stream = "0.3.5"
 
